--- a/knitting/style_sub.css
+++ b/knitting/style_sub.css
@@ -91,7 +91,10 @@
 }
 
 .scoped-style .right{
+  width: auto;
   padding: 15px;
+  margin-left: 0;
+  margin-right: 0;
   box-sizing: border-box;
 }
 
