--- a/knitting/style_sub.css
+++ b/knitting/style_sub.css
@@ -93,7 +93,7 @@
 .scoped-style .right{
   width: auto;
   padding: 15px;
-  margin-left: 0;
+  margin-left: 10px;
   margin-right: 0;
   box-sizing: border-box;
 }
